--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "author": "Jesús Farias",
   "license": "ISC",
   "devDependencies": {
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "nodemon": "^2.0.19"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.6.0",
+    "nodemon": "^2.0.19",
+    "shortid": "^2.2.16",
+    "slug": "^8.0.0"
   }
 }
