--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Nodejs, HandleBars, Moongoose",
   "main": "index.js",
   "scripts": {
-    "sv": "nodemon index"
+    "sv": "nodemon index",
+    "start":"concurrently \"npm run sv\" \"npm run watch \" ",
+    "watch": "webpack -w --mode development"
   },
   "keywords": [],
   "author": "Jesús Farias",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "babel-loader": "^8.2.5",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
@@ -19,6 +24,11 @@
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
     "shortid": "^2.2.16",
-    "slug": "^8.0.0"
+    "slug": "^8.0.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "concurrently": "^7.4.0"
   }
 }
