--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "babel-loader": "^8.2.5",
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "handlebars": "^4.7.7",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
