--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "handlebars": "^4.7.7",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "slug": "^8.0.0",
     "webpack": "^5.74.0",
