--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.19.0",
     "@babel/preset-env": "^7.19.0",
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
@@ -32,6 +33,7 @@
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "slug": "^8.0.0",
+    "sweetalert2": "^11.4.37",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
