--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.2",
     "handlebars": "^4.7.7",
     "mongoose": "^6.6.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
