--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "handlebars": "^4.7.7",
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
