--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "handlebars": "^4.7.7",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
