--- a/variables.env
+++ b/variables.env
@@ -1,5 +1,5 @@
 PORT = 4000
 NODE_ENV = development
-URI = "mongodb://localhost:27017/enjobs"
+URI = "mongodb+srv://jesus2630:6IVEwCHFdtwLPzbl@cluster0.cth9r9b.mongodb.net/?retryWrites=true&w=majority"
 SECRETO = supersecreto
 KEY = llavesecreta 
