--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "sv": "nodemon index",
-    "start": "concurrently \"npm run sv\" \"npm run watch \" ",
+    "dev": "concurrently \"npm run sv\" \"npm run watch \" ",
+    "start": "node ./index.js",
     "watch": "webpack -w --mode development"
   },
   "keywords": [],
