--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sv": "nodemon index",
     "dev": "concurrently \"npm run sv\" \"npm run watch \" ",
-    "start": "node index",
+    "start": "node index.js",
     "watch": "webpack -w --mode development"
   },
   "keywords": [],
@@ -29,7 +29,7 @@
     "express-validator": "^6.14.2",
     "handlebars": "^4.7.7",
     "http-errors": "^2.0.0",
-    "mongoose": "^6.6.0",
+    "mongoose": "^6.6.6",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^5.0.0",
